# Forensic-Playbook

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Development-Session-Summary.md  Forensic-Playbook-v2.0-Migration-Progress-Report.md  LEGACY.md  MIGRATION_GUIDE.md-v1-zu-v2-Überarbeitung.md  Makefile  PROJECT_STATUS.md  Projektstruktur-v2.0.md  README.md  REPORT.md  SESSION_SUMMARY.md  Walkthrough.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  docs-pages.yml
codex/: AGENTS.md  install_forensic_codex.sh  start_all_forensic.sh
config/: AGENTS.md  framework.yaml  tool_inventory.json
config/modules/: live_response.yaml  malware_analysis.yaml  memory_dump.yaml  network.yaml  network_capture.yaml  persistence.yaml  quick_triage.yaml  reporting.yaml  system_info.yaml
docs/: AGENTS.md  ARCHITECTURE.md  Developer-Guide.md  Getting-Started.md  User-Guide.md  _sidebar.md
docs-site/: docusaurus.config.ts  package-lock.json  package.json
docs-site/docs/: index.md
docs/MODULES/: acquisition.md  analysis.md  reporting.md  router-suite.md  router.md  triage.md
docs/api/: CLI.md  SDK.md
docs/archive/: README.md.old
docs/examples/: ioc-hunting.md  minimal-e2e.md
docs/mcp/: codex-workflow.md  forensic-mode.md
docs/modules/: disk_imaging.md  ioc_scanning.md  malware.md  memory.md  memory_dump.md  registry.md  system_info.md  timeline.md
docs/router/: capture.md  env.md  extract.md  manifest.md
docs/tutorials/: 02_network-timeline-walkthrough.md
forensic/: AGENTS.md  __init__.py  cli.py
forensic/codex/: __init__.py  installer.py  runner.py
forensic/core/: AGENTS.md  __init__.py  chain_of_custody.py  config.py  evidence.py  framework.py  logger.py  module.py  time_utils.py
forensic/mcp/: __init__.py  adapters.py  client.py  config.py  registry.py  schemas.py  tools.py
forensic/modules/: AGENTS.md  __init__.py
forensic/ops/: __init__.py  codex.py
forensic/tools/: AGENTS.md  __init__.py  autopsy.py  bulk_extractor.py  plaso.py  sleuthkit.py  volatility.py  yara.py
forensic/utils/: __init__.py  cmd.py  hashing.py  io.py  paths.py  timefmt.py
forensic_workdir/forensic_meta_20251005T111930Z/: fdisk_all.txt  lsblk.txt  sda_smartctl.txt  sda_udev.txt
notebooks/: 00_Introduction_and_Setup.ipynb  10_Case_Management_and_CoC.ipynb  20_Network_to_Timeline.ipynb  40_Router_Suite_Workflow.ipynb  60_Memory_and_Registry.ipynb  80_Malware_and_IOCs.ipynb  90_Reporting_and_Codex_MCP.ipynb  Makefile  README.md
notebooks/_utils/: common.py
notebooks/exercises/: 20_Network_to_Timeline_exercise.ipynb  40_Router_Suite_Workflow_exercise.ipynb  90_Reporting_and_Codex_MCP_exercise.ipynb
notebooks/solutions/: 20_Network_to_Timeline_solution.ipynb  40_Router_Suite_Workflow_solution.ipynb  90_Reporting_and_Codex_MCP_solution.ipynb
pipelines/: AGENTS.md  disk_forensics.yaml  incident_response.yaml  malware_analysis.yaml
router/: AGENTS.md
router/scripts/: analyze_ui_artifacts.sh  collect_router_ui.py  extract_ddns.sh  extract_devices.sh  extract_eventlog.sh  extract_portforwards.sh  extract_session_csrf.sh  extract_tr069.sh  extract_ui_artifacts.sh  find_backups.sh  generate_evidence_manifest.sh  prepare_env.sh  summarize_report.sh  (+4 more)
scripts/: AGENTS.md  audit_usb_ro.sh  forensic-cli.py  forensic_clone.sh  forensic_quick_report.sh  forensic_ro_analysis.sh  fstools_basic_analysis.sh  harden_ssh.sh  identify_disks.sh  install_forensic_deps.sh  ioc_grep.sh  local.rules  quick-triage.sh  scan_all_repos.sh  timeline_builder.py  triage_offline.sh  verify_image.sh
tests/: AGENTS.md  conftest.py  test_acquisition.py  test_cli_codex.py  test_cli_docs_links.py  test_cli_mcp.py  test_config_defaults.py  test_core_config.py  test_e2e_minimal.py  test_framework.py  test_guarded_modules.py  test_imports.py  test_layout_tools.py  test_mcp_client.py  test_mcp_registry.py  test_modules.py  test_network_debug_input.py  test_new_modules.py  test_reporting_exporter.py  test_router_env.py  test_router_extract.py  test_router_manifest.py  test_router_pipeline.py  test_router_summarize.py  test_tools_wrappers.py  test_utils_cmd.py  test_utils_hashing.py  test_utils_helpers.py  test_utils_timefmt.py
tools/: AGENTS.md  generate_module_matrix.py  migrate_iocs.py  run_minimal_flow.py  sleuthkit.py  sleuthkit_legacy.py  validate_project_layout.py
(+97 files in other folders)
